--- a/templates/add.html
+++ b/templates/add.html
@@ -8,11 +8,13 @@
 		}
 	</style>
 	<center>
-		<form action="/adding" method="post">
+		<form action="/adding" method="post" enctype="multipart/form-data">
 			<input type="text" name="title" class="in" autofocus placeholder="Please, insert the title:" value="{{title}}">
-			<button class="safe">Add Post</button>
-            <button class="danger" type="button"><a href="/" class="none_red">Cancel</a></button>
-			<textarea name="post" id="textarea" placeholder="Type your post here:" rows="18" style="width: 70%;">{{body}}</textarea><br>
+			<button class="safe" type="submit">Add Post</button>
+			<button class="danger" type="button"><a href="/" class="none_red">Cancel</a></button>
+			<textarea name="post" id="textarea" placeholder="Type your post here:" rows="17" style="width: 70%;">{{body}}</textarea><br>
+			<label for="file">Attach a file (optional):</label>
+			<input type="file" name="file">
 		</form>
 	</center>
 {% endblock %}
