--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,9 @@
 {% block body %}
 	<div style="margin-left: 15%; margin-right: 15%; margin-top: 2%;">
 		<h1>{{post['title']}}</h1>
+		{% if url %}
+			<img src="{{url}}" alt="{{post['file']}}">
+		{% endif %}
 		<p>{% for c in post['body'] %}{% if c == '\n'%}<br>{% endif %}{{c}}{% endfor %}</p>
 		<span>This post was published on {{post['pub_date']}} {% if group %} in <a href="/{{group['_id']}}-group" class="link">{{group['name']}}</a> {% endif %} by <a href="/{{_id}}" class="link">@{{post['username']}}</a>.</span><br>
 		{% if likeable %}
