add support for images and file download

--- a/templates/post.html
+++ b/templates/post.html
@@ -17,7 +17,7 @@
 			👍Liked by {{post['likes']}} users.
 		{% endif %}
 		{% if saveable %}
-			<button onclick="save();" class="none_button" id="save">📝Save ({{post['saved']}})</button><br>
+			<button onclick="save();" class="none_button" id="save">📝Save ({{post['saved']}})</button>
 		{% else %}
 			📝Saved by {{post['saved']}} users.
 		{% endif %}
