Increased the speed

--- a/templates/add.html
+++ b/templates/add.html
@@ -1,20 +1,1 @@
-{% extends "base.html" %}
-{% block title %}Add Post{% endblock %}
-{% block body %}
-	<style type="text/css">
-		textarea {
-			border-radius: 15px;
-			font-size: 115%;
-		}
-	</style>
-	<center>
-		<form action="/adding" method="post" enctype="multipart/form-data">
-			<input type="text" name="title" class="in" autofocus placeholder="Please, insert the title:" value="{{title}}">
-			<button class="safe" type="submit">Add Post</button>
-			<button class="danger" type="button"><a href="/" class="none_red">Cancel</a></button>
-			<textarea name="post" id="textarea" placeholder="Type your post here:" rows="17" style="width: 70%;">{{body}}</textarea><br>
-			<label for="file">Attach a file (optional):</label>
-			<input type="file" name="file">
-		</form>
-	</center>
-{% endblock %}
+{% extends "base.html" %}{% block title %}Add Post{% endblock %}{% block body %}<style type="text/css">textarea {border-radius: 15px;font-size: 115%;}</style><center><form action="/adding" method="post" enctype="multipart/form-data"><input type="text" name="title" class="in" autofocus placeholder="Please, insert the title:" value="{{title}}"><button class="safe" type="submit">Add Post</button><button class="danger" type="button"><a href="/" class="none_red">Cancel</a></button><textarea name="post" id="textarea" placeholder="Type your post here:" rows="17" style="width: 70%;">{{body}}</textarea><br><label for="file">Attach a file (optional):</label><input type="file" name="file"></form></center>{% endblock %}
