--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 			margin-right: 5%;
 		}
 	</style>
-	<span id="notifications"></span>
+	<span id="notifications" style="margin-left: 5%;"></span>
 	<!--
     PeoplePerHour Profile Widget
     The div#pph-hire me is the element
