--- a/templates/base.html
+++ b/templates/base.html
@@ -1,68 +1,1 @@
-<!DOCTYPE html>
-
-<html lang="en">
-	<head>
-		<meta name="viewport" content="initial-scale=1, width=device-width">
-		<title>{% block title %}{% endblock %}</title>
-	</head>
-	<body>
-		<style type="text/css">
-			* { font-size: 105%; }
-			.n {
-				color: white;
-				margin-right: 1%;
-				margin-left: 1%;
-			}
-			.n:hover {
-				text-decoration: none;
-				color: whitesmoke;
-			}
-			::-webkit-scrollbar { width: 10px; }
-			::-webkit-scrollbar-track {
-				box-shadow: inset 0 0 1px black;
-				border-radius: 15px;
-			}
-			::-webkit-scrollbar-thumb {
-				border-radius: 15px;
-				background-color: lightgrey;
-			}
-			::-webkit-scrollbar-thumb:hover {background: rgb(200, 200, 200);}
-			.div {color: rgb(0, 140, 180);}
-		</style>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<header style="background-color: #1a4287;">
-			<center>	
-				<h1><a href="/" class="n">Social Media App</a></h1>
-				<div>
-					{% if user %}
-						<a href="/{{user._id}}" class="n">@{{user["username"]}}</a>
-						<span class="div">|</span>
-					{% endif %}
-					<a href="/add" class="n">Add Post</a>
-					<span class="div">|</span>
-					<a href="/users" class="n">Users</a>
-					<span class="div">|</span>
-					<a href="/library" class="n">Library</a>
-					<span class="div">|</span>
-					<a href="/create-group" class="n">Create Group</a>
-					<span class="div">|</span>
-					<a href="/settings" class="n">Settings</a>
-					<span class="div">|</span>
-					<a href="/search" class="n">Search</a>
-				</div>
-			</center>
-		</header>
-		{% with messages = get_flashed_messages() %}
-			{% if messages %}
-				{% for msg in messages %}
-					<center style="background-color: deepskyblue;">
-						<p>{{msg}}</p>
-					</center>
-				{% endfor %}
-			{% endif %}
-		{% endwith %}
-		<span id="body">
-			{% block body %}{% endblock %}
-		</span>
-	</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="initial-scale=1, width=device-width"><title>{% block title %}{% endblock %}</title></head><body><style type="text/css">* { font-size: 105%; }*:focus { outline: none; }.in {margin: 0.5%;border-radius: 15px;width: 300px;height: 35px;}s {border-radius: 15px;background-color: #32a852;border-color: #32a852;color: white;width: 100px;}.s:hover {background-color: white;color: #32a852;}.l {border-radius: 15px;background-color: #325da8;border-color: #325da8;color: white;width: 100px;}.l:hover {background-color: white;color: #325da8;}.s:focus, .l:focus { outline: none; }.ap {border-radius: 15px;border-color: rgb(80, 80, 200);}.ap:hover {background-color: rgb(80, 80, 200);color: white;}.n {color: #f0f0f0;margin-right: 1%;margin-left: 1%;}.n:hover {text-decoration: none;color: #e0dede;}.d {font-size: 90%;color: red;}.d:hover {text-decoration: none;color: #ff6b6b;}.link {color: black;text-decoration: underline;}.link:hover {text-decoration: none;color: #383838;}.c { font-size: 90%; }.c:hover {text-decoration: none;color: rgb(93, 167, 204);}.a:hover { text-decoration: none; }.b:hover { text-decoration: none; }.change {border-radius: 15px;margin: 0.2%;}.tr {border: none;background-color: white;color: rgb(93, 167, 204);}.tr:hover { color: rgb(133, 194, 224); }.danger {border-radius: 15px;border-color: red;background-color: red;color: white;}.danger:hover {background-color: white;color: red;}.danger:focus { outline: none; }.safe {border-radius: 15px;border-color: #01b42e;background-color: #01b42e;color: white;}.safe:hover {background-color: white;color: #01b42e;}.safe:focus { outline: none; }.none { color: white; }.none:hover {color: white;text-decoration: none;}.none_button {background-color: white;border: none;}.none_button:focus { outline: none; }.none_red { color: white; }.none_red:hover {color: red;text-decoration: none;}.none_green { color: white; }.none_green:hover {color: #01b42e;	text-decoration: none;}::-webkit-scrollbar { width: 10px; }::-webkit-scrollbar-track {box-shadow: inset 0 0 1px black;border-radius: 15px;}::-webkit-scrollbar-thumb {border-radius: 15px;background-color: lightgrey;}::-webkit-scrollbar-thumb:hover {background: rgb(200, 200, 200);}.div {color: #15346b;}</style><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><header style="background-color: #1a4287;"><center><h1><a href="/" class="n">Social Media App</a></h1><div>{% if user %}<a href="/{{user._id}}" class="n">@{{user["username"]}}</a><span class="div">|</span>{% endif %}<a href="/add" class="n">Add Post</a><span class="div">|</span><a href="/users" class="n">Users</a><span class="div">|</span><a href="/library" class="n">Library</a><span class="div">|</span><a href="/create-group" class="n">Create Group</a><span class="div">|</span><a href="/settings" class="n">Settings</a><span class="div">|</span><a href="/search" class="n">Search</a></div></center></header>{% with messages = get_flashed_messages() %}{% if messages %}{% for msg in messages %}<center style="background-color: lightblue;"><p>{{msg}}</p></center>{% endfor %}{% endif %}{% endwith %}<span id="body">{% block body %}{% endblock %}</span></body></html>
